# sysops

./: .gitignore  CMakeLists.txt  README.md
KaramonPiotr/cw10/: Makefile  main.c
cw01/: Makefile  countdown.c  log.txt
cw02/: Makefile  collatz.c  collatz.h  log.txt  main.c  raport.txt
cw02/collatz/: collatz.c
cw03/: raport.txt
cw03/zad1/: Makefile  log.txt  reverse.c  tester  tests-results.txt
cw03/zad2/: Makefile  log.txt  main.c
cw04/: raport.txt
cw04/zad1/: Makefile  main.c
cw04/zad2/: Makefile  log.txt  main.c
cw05/zad1/: Makefile  main.c
cw05/zad2/: Makefile  catcher.c  sender.c
cw06/zad1/: Makefile  main.c  time-raport.txt
cw06/zad2/: Makefile  calculator.c  caller.c  communication.h
cw07/: Makefile  client.c  queue_spec.h  server.c
cw08/: Makefile  printers_server.c  printers_server.h  shared_memory_spec.h  users_client  users_client.c
cw09/: grid.c  grid.h  life.c
cw10/: main.c
cw11/: Makefile  client.c  server.c  socket_utils.c  socket_utils.h
lab1/: Makefile  raport.txt
lab1/zad1/: Makefile  countdown  countdown.c
